--- a/libutils/libutils.vcxproj
+++ b/libutils/libutils.vcxproj
@@ -77,7 +77,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\business;..\protocol;..\common;..\lib\pthreads\Pre-built.2\include;..\..\..\nanomsg\src;..\..\..\cppnanomsg</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\common</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
@@ -139,31 +139,26 @@
   <ItemGroup>
     <ClInclude Include="cmdline.h" />
     <ClInclude Include="Data.h" />
-    <ClInclude Include="ext\base64.h" />
-    <ClInclude Include="ext\md5.h" />
-    <ClInclude Include="ext\xxtea.h" />
+    <ClInclude Include="base64.h" />
+    <ClInclude Include="md5.h" />
+    <ClInclude Include="xxtea.h" />
     <ClInclude Include="FileUtils.h" />
     <ClInclude Include="lw_util.h" />
     <ClInclude Include="lw_base64.h" />
     <ClInclude Include="lw_xxtea.h" />
     <ClInclude Include="Threadable.h" />
-    <ClInclude Include="win32helpers\getopt.h" />
-    <ClInclude Include="win32helpers\gettimeofday.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Data.cpp" />
-    <ClCompile Include="ext\base64.c" />
-    <ClCompile Include="ext\md5.c" />
-    <ClCompile Include="ext\md5hl.c" />
-    <ClCompile Include="ext\xxtea.c" />
+    <ClCompile Include="base64.c" />
+    <ClCompile Include="md5.c" />
+    <ClCompile Include="md5hl.c" />
+    <ClCompile Include="xxtea.c" />
     <ClCompile Include="FileUtils.cpp" />
     <ClCompile Include="lw_util.cpp" />
     <ClCompile Include="lw_base64.cpp" />
     <ClCompile Include="lw_xxtea.cpp" />
     <ClCompile Include="Threadable.cpp" />
-    <ClCompile Include="win32helpers\getopt.c" />
-    <ClCompile Include="win32helpers\getopt_long.c" />
-    <ClCompile Include="win32helpers\gettimeofday.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
