--- a/nanomsg_libevent_demo/nanomsg_libevent_demo/nanomsg_libevent_demo.vcxproj
+++ b/nanomsg_libevent_demo/nanomsg_libevent_demo/nanomsg_libevent_demo.vcxproj
@@ -29,16 +29,6 @@
     <ClCompile Include="..\..\libnet\socket_server.cpp" />
     <ClCompile Include="..\..\libnet\socket_session.cpp" />
     <ClCompile Include="..\..\libnet\socket_timer.cpp" />
-    <ClCompile Include="..\..\libutils\base64.c" />
-    <ClCompile Include="..\..\libutils\Data.cpp" />
-    <ClCompile Include="..\..\libutils\FileUtils.cpp" />
-    <ClCompile Include="..\..\libutils\lw_base64.cpp" />
-    <ClCompile Include="..\..\libutils\lw_util.cpp" />
-    <ClCompile Include="..\..\libutils\lw_xxtea.cpp" />
-    <ClCompile Include="..\..\libutils\md5.c" />
-    <ClCompile Include="..\..\libutils\md5hl.c" />
-    <ClCompile Include="..\..\libutils\Threadable.cpp" />
-    <ClCompile Include="..\..\libutils\xxtea.c" />
     <ClCompile Include="..\..\platform_server\client_main.cpp" />
     <ClCompile Include="..\..\platform_server\Desk.cpp" />
     <ClCompile Include="..\..\platform_server\PlatformServer.cpp" />
@@ -86,16 +76,6 @@
     <ClInclude Include="..\..\libnet\socket_server.h" />
     <ClInclude Include="..\..\libnet\socket_session.h" />
     <ClInclude Include="..\..\libnet\socket_timer.h" />
-    <ClInclude Include="..\..\libutils\base64.h" />
-    <ClInclude Include="..\..\libutils\cmdline.h" />
-    <ClInclude Include="..\..\libutils\Data.h" />
-    <ClInclude Include="..\..\libutils\FileUtils.h" />
-    <ClInclude Include="..\..\libutils\lw_base64.h" />
-    <ClInclude Include="..\..\libutils\lw_util.h" />
-    <ClInclude Include="..\..\libutils\lw_xxtea.h" />
-    <ClInclude Include="..\..\libutils\md5.h" />
-    <ClInclude Include="..\..\libutils\Threadable.h" />
-    <ClInclude Include="..\..\libutils\xxtea.h" />
     <ClInclude Include="..\..\platform_server\client_main.h" />
     <ClInclude Include="..\..\platform_server\Desk.h" />
     <ClInclude Include="..\..\platform_server\PlatformServer.h" />
@@ -164,8 +144,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\..\..\libevent\build\vs2013\lib\Debug;..\..\..\nanomsg\build\vs2013\Debug;..\..\..\log4z\lib\Debug;..\..\..\protobuf\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>ws2_32.lib;wsock32.lib;event.lib;nanomsg.lib;libprotobufd.lib;libprotocd.lib;log4z_win32d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\libevent\build\vs2013\lib\Debug;..\..\..\nanomsg\build\vs2013\Debug;..\..\..\log4z\lib\Debug;..\..\..\protobuf\lib;..\debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ws2_32.lib;wsock32.lib;event.lib;nanomsg.lib;libprotobufd.lib;libprotocd.lib;log4z_win32d.lib;libutils.lib;libnet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -184,8 +164,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\..\libevent\build\vs2013\lib\Release;..\..\..\nanomsg\build\vs2013\Release;..\..\..\log4z\lib\Release;..\..\..\protobuf\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>ws2_32.lib;wsock32.lib;event.lib;nanomsg.lib;libprotobuf.lib;libprotoc.lib;log4z_win32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\libevent\build\vs2013\lib\Release;..\..\..\nanomsg\build\vs2013\Release;..\..\..\log4z\lib\Release;..\..\..\protobuf\lib;..\release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ws2_32.lib;wsock32.lib;event.lib;nanomsg.lib;libprotobuf.lib;libprotoc.lib;log4z_win32.lib;libutils.lib;libnet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
