--- a/libnet/libnet.vcxproj.filters
+++ b/libnet/libnet.vcxproj.filters
@@ -5,9 +5,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="core">
-      <UniqueIdentifier>{58a88064-c036-4217-ac81-6862ca3783c5}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="http_server.cpp" />
@@ -16,22 +13,16 @@
     <ClCompile Include="socket_timer.cpp" />
     <ClCompile Include="socket_session.cpp" />
     <ClCompile Include="object.cpp" />
-    <ClCompile Include="NetHead.cpp">
-      <Filter>core</Filter>
-    </ClCompile>
-    <ClCompile Include="socket_core.cpp">
-      <Filter>core</Filter>
-    </ClCompile>
     <ClCompile Include="socket_processor.cpp" />
     <ClCompile Include="net.cpp" />
     <ClCompile Include="session_manager.cpp" />
     <ClCompile Include="socket_listener.cpp" />
-    <ClCompile Include="NetPackage.cpp">
-      <Filter>core</Filter>
-    </ClCompile>
-    <ClCompile Include="cache_queue.cpp">
-      <Filter>core</Filter>
-    </ClCompile>
+    <ClCompile Include="cache_queue.cpp" />
+    <ClCompile Include="message_queue.cpp" />
+    <ClCompile Include="nanomsg_socket.cpp" />
+    <ClCompile Include="NetHead.cpp" />
+    <ClCompile Include="NetPackage.cpp" />
+    <ClCompile Include="socket_core.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="http_server.h" />
@@ -41,21 +32,15 @@
     <ClInclude Include="socket_session.h" />
     <ClInclude Include="net.h" />
     <ClInclude Include="object.h" />
-    <ClInclude Include="NetHead.h">
-      <Filter>core</Filter>
-    </ClInclude>
-    <ClInclude Include="socket_core.h">
-      <Filter>core</Filter>
-    </ClInclude>
     <ClInclude Include="socket_hanlder.h" />
     <ClInclude Include="socket_processor.h" />
     <ClInclude Include="session_manager.h" />
     <ClInclude Include="socket_listener.h" />
-    <ClInclude Include="NetPackage.h">
-      <Filter>core</Filter>
-    </ClInclude>
-    <ClInclude Include="cache_queue.h">
-      <Filter>core</Filter>
-    </ClInclude>
+    <ClInclude Include="cache_queue.h" />
+    <ClInclude Include="message_queue.h" />
+    <ClInclude Include="nanomsg_socket.h" />
+    <ClInclude Include="NetHead.h" />
+    <ClInclude Include="NetPackage.h" />
+    <ClInclude Include="socket_core.h" />
   </ItemGroup>
 </Project>
