--- a/project/project.vcxproj
+++ b/project/project.vcxproj
@@ -99,12 +99,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\src;..\protocol;..\http_server;..\platform_server;..\center_server;..\gameserver;..\common;..\..\lw_core\include;..\..\lw_net\include;..\..\lw_common\include;..\..\lw_common\json;..\..\protobuf_lib\include;..\..\..\cpp\libevent;..\..\..\cpp\libevent\include;..\..\..\cpp\libevent\build\vs2013\include;..\..\..\cpp\libevent\WIN32-Code;..\..\..\cpp\nanomsg\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;..\protocol;..\http_server;..\platform_server;..\center_server;..\gameserver;..\common;..\..\lw_core\include;..\..\lw_net\include;..\..\lw_common\include;..\..\lw_common\json;..\..\protobuf_lib\include;..\..\..\cross-common\libevent;..\..\..\cross-common\libevent\include;..\..\..\cross-common\libevent\build\vs2013\include;..\..\..\cross-common\libevent\WIN32-Code;..\..\..\cross-common\nanomsg\src;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\src;E:\boost\boost_1_65_1</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\debug;..\..\protobuf_lib\lib;..\..\..\cpp\libevent\build\vs2013\lib\Debug;..\..\..\cpp\nanomsg\build\vs2013\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\debug;..\..\..\cross-common\libevent\build\vs2013\lib\Debug;..\..\..\cross-common\nanomsg\build\vs2013\Debug;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\cmake\vs2013\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>ws2_32.lib;wsock32.lib;event.lib;nanomsg.lib;libprotobufd.lib;libprotocd.lib;libcommon.lib;libcore.lib;libnet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -117,14 +117,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\src;..\libnet;..\libutils;..\protocol;..\http_server;..\platform_server;..\center_server;..\core;..\json;..\gameserver;..\common;..\libevent\;..\libevent\include;..\libevent\build\vs2013\include;..\libevent\WIN32-Code;..\protobuf\protobuf\include;..\protobuf\include;..\nanomsg\src;..\log4z</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;..\protocol;..\http_server;..\platform_server;..\center_server;..\gameserver;..\common;..\..\lw_core\include;..\..\lw_net\include;..\..\lw_common\include;..\..\lw_common\json;..\..\protobuf_lib\include;..\..\..\cross-common\libevent;..\..\..\cross-common\libevent\include;..\..\..\cross-common\libevent\build\vs2013\include;..\..\..\cross-common\libevent\WIN32-Code;..\..\..\cross-common\nanomsg\src;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\src;E:\boost\boost_1_65_1</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\libevent\build\vs2013\lib\Release;..\..\nanomsg\build\vs2013\Release;..\..\log4z\lib\Release;..\..\protobuf\lib;..\release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\release;..\..\..\cross-common\libevent\build\vs2013\lib\Release;..\..\..\cross-common\nanomsg\build\vs2013\Release;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\cmake\vs2013\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>ws2_32.lib;wsock32.lib;event.lib;nanomsg.lib;libprotobuf.lib;libprotoc.lib;log4z_win32.lib;libutils.lib;libnet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
