--- a/project/project.vcxproj.filters
+++ b/project/project.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="center_server">
       <UniqueIdentifier>{c3150226-70a7-4102-9ac7-71f571b13802}</UniqueIdentifier>
     </Filter>
@@ -82,6 +78,12 @@
     <ClCompile Include="..\src\game_server_main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="protobufrpc_main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\nanomsg_survey_main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\center_server\CenterServer.h">
@@ -146,8 +148,5 @@
     <None Include="..\protocol\protoc.exe">
       <Filter>protocol</Filter>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="protocol\命令.txt" />
   </ItemGroup>
 </Project>
